# hybrid-gcs

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: coverage.yml  release.yml  tests.yml
configs/algorithms/: curriculum.yaml  ppo.yaml  sac.yaml
configs/environments/: drone.yaml  manipulation.yaml  ycb_grasp.yaml
configs/hardware/: drone_hw.yaml  real_robot.yaml  simulator.yaml
docker/: Dockerfile  docker-compose.yml  requirements_docker.txt
docs/: BREV_GPU_SETUP_GUIDE.md  api_reference.md  architecture.md  deployment.md  evaluation.md  getting_started.md  index.md  installation.md  training_guide.md  troubleshooting.md
docs/examples/: basic_usage.md  custom_environment.md  real_world_deployment.md  sim2real_transfer.md
hybrid_gcs/: __init__.py  __version__.py
hybrid_gcs/cli/: __init__.py  eval_cli.py  train_cli.py  viz_cli.py
hybrid_gcs/core/: __init__.py  config_space.py  gcs_decomposer.py  policy_network.py  trajectory_optimizer.py
hybrid_gcs/environments/: __init__.py  base_env.py  drone_env.py  manipulation_env.py  wrappers.py  ycb_grasp_env.py
hybrid_gcs/evaluation/: __init__.py  analysis.py  comparator.py  evaluator.py  metrics.py
hybrid_gcs/integration/: __init__.py  corridor_planning.py  feature_extractor.py  hybrid_policy.py
hybrid_gcs/training/: __init__.py  callbacks.py  curriculum.py  optimized_trainer.py  reward_shaping.py
hybrid_gcs/training/configs/: __init__.py  base_config.py  config_loader.py  default.yaml  fast_train.yaml  production.yaml
hybrid_gcs/utils/: __init__.py  config.py  data_utils.py  logging.py  metrics.py
hybrid_gcs/visualization/: __init__.py  dashboard.py  plots.py  report_generator.py  trajectory_viz.py
notebooks/: 01_getting_started.ipynb  02_training_analysis.ipynb  03_results_visualization.ipynb  04_deployment_guide.ipynb  05_real_world_examples.ipynb
scripts/: benchmark.py  deploy.py  evaluate.py  generate_report.py  sim2real_transfer.py  train.py
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_hybrid_policy.py  test_pipeline.py
tests/performance/: test_memory.py  test_scalability.py  test_speed.py
tests/unit/: test_environments.py  test_gcs.py  test_statistical_analysis.py  test_training.py  test_utils.py
