[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-gcs"
version = "2.0.0"
description = "Hybrid GCS-RL for Robot Learning and Control"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Hybrid-GCS Team", email = "team@hybrid-gcs.dev"}]

keywords = [
    "reinforcement-learning",
    "robot-learning",
    "control",
    "gcs",
    "trajectory-optimization",
    "hybrid-control",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "scipy>=1.7.0",
    "pyyaml>=5.4.0",
    "gym>=0.19.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "pytest-xdist>=2.3.0",
    "black>=21.6b0",
    "isort>=5.9.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]

docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

visualization = [
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "jupyterlab>=3.1.0",
]

simulation = [
    "pybullet>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/hybrid-gcs/hybrid-gcs"
Documentation = "https://hybrid-gcs.readthedocs.io"
Repository = "https://github.com/hybrid-gcs/hybrid-gcs.git"
"Issue Tracker" = "https://github.com/hybrid-gcs/hybrid-gcs/issues"

[project.scripts]
hybrid-gcs = "hybrid_gcs.cli:main"
hybrid-train = "scripts.train:main"
hybrid-eval = "scripts.evaluate:main"
hybrid-benchmark = "scripts.benchmark:main"
hybrid-deploy = "scripts.deploy:main"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "slow: Slow tests",
]
